src/test/deca/codegen/invalid/created/testOpArith/divisionzero.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 14: Error: Overflow during arithmetic operation
// 


{
    int alpha , beta;
    int gamma;
    alpha = 15;
    beta = 0;
    gamma = alpha/beta ;
}